--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
+    "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.16"
   },
